--- a/scss/leaf/_main.scss
+++ b/scss/leaf/_main.scss
@@ -31,7 +31,7 @@ leaf-sidebar {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 99999;
+    z-index: 9999;
     overflow: hidden;
     @include transform(translate(-100%, 0) translateZ(0));
     @include transition(transform $sidebar-transition-duration $sidebar-transition-function);
